--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,13 +4,22 @@ nav {
     flex-direction: row;
     /* width: 10hw; */
     height: fit-content;
-    background-color: black;
+    /* background-color: black; */
+    /* background: rgb(165,239,255);
+    background: radial-gradient(circle, rgba(165,239,255,1) 0%, rgba(71,144,212,0.07) 77%, rgba(137,215,249,0.16) 100%);  */
+    /* background: rgb(165,239,255, 0.01); */
+    /* background: linear-gradient(91deg, rgba(165,239,255,.26) -150%, rgba(71,144,212,0.07) 77%, rgba(137,215,249,0.16) 100%);  */
+    background: linear-gradient(91deg, rgba(165,239,255,.052) -150%, rgba(71,144,212,0.014) 77%, rgba(137,215,249,0.032) 100%); 
+    -webkit-backdrop-filter: blur(16px);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.05);
+    backdrop-filter: blur(16px);
     padding-left: 2em;
     padding-right: 2em;
     justify-content: space-between;
 }
 nav * {
     font-weight: 400;
+    line-height: .25;
 }
 
 #nav-title {
