--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,4 @@
 body {
-    background-color: #303030;
-    font-family: 'Helvetica', sans-serif;
     /* width: 100%;
     height: 100%; */
     margin: 0;
@@ -10,7 +8,9 @@ body {
   /* font-family: system-ui, Avenir, Helvetica, Arial, sans-serif; */
   line-height: 1.5;
   font-weight: 400;
-
+    
+  /* background-color: #303030; */
+  font-family: 'Helvetica', sans-serif;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
