--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,4 +1,6 @@
 nav {
+    position: relative;
+    z-index: 2;
     margin-top: 2em;
     display: flex;
     flex-direction: row;
@@ -18,6 +20,7 @@ nav {
     justify-content: space-between;
 }
 nav * {
+    z-index: auto;
     font-weight: 400;
     line-height: .25;
 }
