--- a/src/components/CanvasComponent.css
+++ b/src/components/CanvasComponent.css
@@ -1,8 +1,11 @@
 #canv {
-    height: 100vh;
+    height: 110vh;
     width: 100vw;
     z-index: -1;
     position: absolute;
     top: 0;
     left: 0;
+    margin: 0;
+    padding: 0;
+    object-fit: cover;
 }
