--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
   /* background-color: #303030; */
   font-family: 'Helvetica', sans-serif;
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: #ffffffde;
   background-color: #242424;
 
   font-synthesis: none;
