--- a/src/components/GamePage.css
+++ b/src/components/GamePage.css
@@ -20,10 +20,12 @@
 
 #main-content {
     display: flex;
+    flex-direction: column;
     top: 0;
     left: 0;
     padding: 0;
     margin: 0;
+    width: 35vw;
 }
 
 
@@ -47,4 +49,15 @@
     width: 100%;
     height: 100%;
     background-color: #303030;
+}
+
+#logbox {
+    flex-grow: 1;
+    background-color: #202020;
+    overflow: scroll;
+}
+
+#logbox-ul * {
+    text-decoration: none;
+    list-style: none;
 }
