--- a/src/components/GamePage.css
+++ b/src/components/GamePage.css
@@ -62,3 +62,9 @@
     text-decoration: none;
     list-style: none;
 }
+
+#fen-indicator {
+    font-size: .8em;
+    font-weight: 500;
+    letter-spacing: .05em;
+}
